Add health check API
