# src/openapi_server/controllers/etc_controller.py
@@ -1,0 +1,19 @@
+import connexion
+import six
+from typing import Dict
+from typing import Tuple
+from typing import Union
+
+from openapi_server.models.api_response import ApiResponse  # noqa: E501
+from openapi_server import util
+
+
+def health_check():  # noqa: E501
+    """Health Check API
+
+    Always return 200 # noqa: E501
+
+
+    :rtype: Union[ApiResponse, Tuple[ApiResponse, int], Tuple[ApiResponse, int, Dict[str, str]]
+    """
+    return 'do some magic!'
